crates/auto-lang/test/cookbook/errors/002_anyhow/anyhow.at
dep anyhow
use.rust anyhow::Context
use.rust anyhow::Result

fn read_config() !str {
    let content = std.fs.read_to_string("config.toml").context("Failed to read config").?
    Ok(content)
}

fn main() {
    let result = read_config()
    var got_err = false
    is result {
        Ok(val) -> print(f"Config result: ${val}"),
        Err(e) -> got_err = true
    }
    assert(got_err == true)
}
